# space

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.codex/skills/git-commit/: SKILL.md
.github/workflows/: build.yml  test.yml
apps/space/: main.cpp
archived/: entities.fnl
assets/data/: freedesktop-icons.json
assets/lua/: aligned.fnl  app-bootstrap.fnl  app-projection.fnl  app-viewport.fnl  ball.fnl  bar-series.fnl  bounds-utils.fnl  box-selector.fnl  bucket-queue.fnl  build-context.fnl  button.fnl  camera-state.fnl  camera.fnl  car-state-utils.fnl  car-state.fnl  car.fnl  card.fnl  chart.fnl  cli-args.fnl  clickables.fnl  clip-utils.fnl  combo-box.fnl  container.fnl  cuboid.fnl  dark-theme.fnl  debug-log.fnl  deep-dialog.fnl  default-dialog.fnl  demo-audio.fnl  demo-car.fnl  demo-chart.fnl  demo-dialogs.fnl  demo-force-layout.fnl  demo-lines.fnl  demo-physics-cuboids.fnl  demo-points.fnl  depth-cuboid.fnl  dev-check-padding.fnl  dialog.fnl  draw-batcher.fnl  (+156 more)
assets/lua/entities/: link.fnl  list.fnl  string.fnl
assets/lua/graph/: core.fnl  edge.fnl  init.fnl  key-loader-utils.fnl  key-loaders.fnl  node-base.fnl  view.fnl
assets/lua/http/: common.fnl
assets/lua/launchables/: box-textured.fnl  chat.fnl  demo-browser.fnl  graph-control.fnl  icon-browser.fnl  launcher.fnl  sub-app-one.fnl  terminal.fnl  tetris.fnl  toggle-theme.fnl  wallet.fnl
assets/lua/llm/: ids.fnl  init.fnl  models.fnl  requests.fnl  store.fnl
assets/lua/tests/: all.fnl  e2e.fnl  fast.fnl  http-fixtures.fnl  init.fnl  record-openai-fixture.fnl  record-openai-tools-fixture.fnl  runner.fnl  slow.fnl  test-aligned.fnl  test-aubio-helpers.fnl  test-aubio-pipelines.fnl  test-aubio-stream.fnl  test-aubio.fnl  test-audio-input.fnl  test-ball.fnl  test-bucket-queue.fnl  test-button.fnl  test-callbacks.fnl  test-car-state.fnl  test-car.fnl  test-cgltf.fnl  test-chart.fnl  test-cli-args.fnl  test-clickables.fnl  test-colors.fnl  test-combo-box.fnl  test-container.fnl  test-cuboid.fnl  test-deep-dialog.fnl  test-demo-browser.fnl  test-demo-car.fnl  test-dialog.fnl  test-external-editor.fnl  test-first-person-controls.fnl  test-flamegraph.fnl  test-flat-terrain-theme.fnl  test-flex.fnl  test-focus.fnl  test-force-layout.fnl  (+107 more)
assets/lua/tools/: remote-control-client.fnl
assets/material-design-icons/: README.txt
assets/material-design-icons/msdf/: README.md  charset.txt  icons.json
assets/models/: AnimatedUnlitTriangle.gltf
assets/python/: bullet_example.py  classes.py  kernels.py  python_world.py  setup_db.py  subprocess_kernel_launcher.py  util.py
assets/python/lib/: requests.py  sexpdata.py  texture_font.py  transformations.c  transformations.py
assets/python/z/: ActionsPanel(148).py  AgentOne(281).py  AgentOneView(282).py  Aio(472).py  Aligned(248).py  ApplicationKeyMenuLauncher(186).py  Apps(326).py  AppsApp(400).py  AppsBrowser(327).py  AppsVimMode(381).py  (+339 more)
assets/seed/: 01fc9108-5876-44ed-a5de-350bbd6641de.json  021cb530-ae60-47f3-a322-64383f850a05.json  02f84f2e-e115-4d39-8491-c1d5326ac552.json  0496b893-ef86-4282-9ae8-e1a26c0894a8.json  04fd773e-aadc-4044-853b-bc6b35141508.json  05d0a95e-bad3-4ffe-bdb9-756199bcf924.json  0608f978-6f75-42ae-9d0b-eb5d3720c9ea.json  0721bf68-b77d-44b5-a8fd-f683527834c0.json  0c85113f-48ad-42fc-8d5e-78ec83b4bbde.json  0cf9a460-d457-4761-bad2-1b8200fedfeb.json  0e7f0314-7776-4e43-9e84-46d7159ad34a.json  0f0b9f20-047d-4e86-8c11-14b219f7aa9a.json  1000.json  1001.json  1002.json  1003.json  1004.json  1025bb48-b0d8-46ff-9982-9b4d81bf47ba.json  103.json  103b93eb-0b29-4527-8a3a-4fbb5f8a49fb.json  104.json  105.json  106.json  108.json  11515f09-e184-4c46-ab76-36a11ed4e248.json  120760bc-49c2-429a-881d-1136e2f6d89d.json  1314fdbf-b233-416a-b1f9-af14e104d098.json  1338c967-ed47-4f28-b3a2-fc261c4eb225.json  136.json  137.json  138.json  139.json  140.json  141.json  142.json  143.json  144.json  148.json  150.json  154.json  (+512 more)
assets/shaders/: clipping.glsl  fxaa.frag  fxaa.vert  image.frag  image.vert  lighting.glsl  line.frag  line.vert  mesh.frag  mesh.vert  msdf.frag  msdf.vert  pic.frag  pic.vert  point.frag  point.vert  skybox.frag  skybox.vert  text.frag  text.vert  triangle.frag  triangle.vert
doc/: aubio.md  audio.md  directional-focus-traversal.md  focus-change-ordering.md  force-layout-barnes-hut.md  gltf-async-embedded-texture-decode.md  graph-key-based-loaders.md  graph-llm.md  graph-view-as-widget.md  graph-vs-entities.md  graph.md  hackernews.md  icons.md  layered-points-in-graph.md  lighting.md  link-entities.md  list-entities.md  loop.md  matrix.md  multithreading.md  mystery-layout-error.md  preload.md  process.md  prof-graph-layout.md  prof-scroll.md  prof-terminal.md  render-architecture.md  render-capture.md  resize-bugs.md  selection.md  string-entities.md  sub-app.md  sub_world.md  tempfile.md  terminal.md  testing-http-clients.md  transform-pass.md  wallet-core.md  wallet.md  wlroots-status.md  (+1 more)
doc/openai/: index.md
doc/zai/: zai-chat-completion.md
ffi/matrix/: Cargo.toml  README.md
pod/conduit/: .gitignore  README.md  conduit.toml  download.sh
scripts/: build-linux.sh  build-windows-from-linux.sh  build-windows.sh  build_icon_index.py  inspect_zai.py  install-git-hooks.sh  openai_requests_viewer.py  prof.py  qentities.py  remote-control-debug.fixed.sh  remote-control-heavy.sh  seed.py
scripts/tests/: test_openai_requests_viewer.py
src/: appdirs.cpp  appdirs.h  asset_manager.cpp  asset_manager.h  audio.cpp  audio.h  audio_input.cpp  audio_input.h  cgltf_jobs.cpp  cgltf_jobs.h  colors.cpp  colors.h  engine.cpp  engine.h  force_layout.cpp  force_layout.h  force_layout_quad_tree.hpp  gl_debug.hpp  globals.h  gltf_mesh_job.h  http_client.cpp  http_client.h  image_loader.cpp  image_loader.h  input_keyboard_state.cpp  input_keyboard_state.h  input_mouse_state.cpp  input_mouse_state.h  input_state.cpp  input_state.h  job_system.cpp  job_system.h  keyring.cpp  keyring.h  log.cpp  log.h  lua_appdirs.cpp  lua_aubio.cpp  lua_aubio_bindings.h  lua_aubio_io.cpp  (+88 more)
src/prof/: profile_python_force_layout.cpp
tests/: test_lua.cpp
(+148 files in other folders)
